pl - final documentation push

--- a/DenoisingAutoencoder.ipynb
+++ b/DenoisingAutoencoder.ipynb
@@ -11,7 +11,37 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Etude Autoencodeur\n",
+        "# Sommaire\n",
+        "* [Etude Autoencodeur](#etude-ae)\n",
+        "    * [Exploration et création des bruits](#exploration-et-création-des-bruits)\n",
+        "    * [Création du jeu de données bruitées](#création-dun-dataset-bruité)\n",
+        "    * [Création dataloaders](#création-des-dataloaders-à-partir-des-datasets)\n",
+        "    * [Définition de l'Autoencodeur de débruitage (classes 1 et 7)](#definition-de-lautoencodeur-de-débruitage)\n",
+        "        * [Définition de l'optimisateur et loss](#definition-de-loptimisateur-de-la-loss-et-du-modèle)\n",
+        "        * [Méthode d'entraînement](#definition-de-la-methode-dentraînement-du-modèle)\n",
+        "        * [Premiers résultats du modèle](#résultats-de-lentraînement-du-modèle)\n",
+        "        * [Optimisation de l'architecture du modèle](#optimisation-de-larchitecture-du-modèle)\n",
+        "        * [Visualisation des prédictions](#visualisation-des-prédictions-du-modèle-sur-des-images-bruitées)\n",
+        "\n",
+        "    * [Extension du modèle sur toutes les classes MNIST](#modèle-sur-lensemble-des-données-mnist)\n",
+        "    * [Implémentation d'architectures dérivées](#implémentation-de-nouvelles-architectures-dérivées)\n",
+        "        * [Définition du classifieur benchmark CNN](#définition-du-classifier-benchmark-cnn)\n",
+        "            * [Résultats Benchmark CNN](#résultat-benchmark-cnn)\n",
+        "        * [Définition du classifieur Encoder-MLP](#definition-du-classifier-encoder-mlp)\n",
+        "            * [Création du trainset avec les zones latentes](#création-du-jeu-dentraînement-avec-les-zones-latentes)\n",
+        "            * [Résultats du classifieur Encoder-MLP](#résultats-du-classifieur-encoder-mlp)\n",
+        "            * [GridSearch modèle Encodeur-MLP](#gridsearch-modèle-encodeur-mlp)\n",
+        "    * [Discussion sur les réssultats obtenus](#discussion-sur-les-performances-de-modèles-encodeur-cnn-et-encodeur-mlp)\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Etude Autoencodeur <a class=\"anchor\" id=\"etude-ae\"></a>\n",
         "\n",
         "Un autoencodeur est un réseau de neurones utilisé pour la réduction de dimension ; c'est-à-dire pour la sélection et l'extraction des caractéristiques. Les autoencodeurs avec plus de couches cachées que d'entrées courent le risque d'apprendre la fonction identité - où la sortie est simplement égale à l'entrée - devenant ainsi inutiles.\n",
         "Les autoencodeurs de débruitage sont une extension de l'autoencodeur de base, et représentent une version stochastique de celui-ci. Les autoencodeurs de débruitage tentent de résoudre le risque de la fonction identité en corrompant aléatoirement l'entrée (c'est-à-dire en introduisant du bruit) que l'autoencodeur doit ensuite reconstruire, ou débruiter.\n",
@@ -446,13 +476,6 @@
         "\n",
         "    return (xNoise, xClean, y)\n",
         "    "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "#### Création des dataset \"bruités\""
       ]
     },
     {
@@ -903,6 +926,15 @@
       ],
       "source": [
         "train_test(model, optimizer, criterion, 120, device, trainloader, testdata)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Résultats de l'entraînement du modèle\n",
+        "\n",
+        "Au terme de l'entraînement qui à duré 16 minutes environ, on observe une loss qui décroit de 2% à 1%, ce qui montre une performance relativement bonne du modèle pendant son entraînement. Ce score est en accord avec son erreur de generalisation d'environ 1% montrant sa capacité à débruiter des données non présentes lors de l'entraînement. A présent, tentons d'optimiser le modèle afin de gagner en performance."
       ]
     },
     {
@@ -2115,7 +2147,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---\n",
+        "---\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Implémentation de nouvelles architectures dérivées"
       ]
     },
@@ -2413,6 +2451,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "#### Résultat Benchmark CNN\n",
+        "\n",
+        "Les résultats précédents nous montrent que notre modèle CNN n'est pas de très grande qualité. Pendant son entraînement, la loss n'atteint pas de valeur en dessous de 1, ce qui laisse à désirer la qualité de la classification. Puis, en calculant sont accuracy sur le jeu de test, on trouve 87% et 12% d'erreur. Ce modèle créé une bonne baseline sur laquelle comparer le modèle suivant."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Definition du classifier (Encoder-MLP)\n",
         "\n",
         "**Ce modèle entre en compétition avec notre claassifier CNN**\n",
@@ -2637,14 +2684,24 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Le calcul de l'erreur réelle avec la fonction `true_error_func` nous retourne une erreure réelle de 8%, ce qui est un très bon score. Cela indique que notre modèle est capable de se généraliser a des données inconnues."
+        "### Résultats du classifieur Encoder-MLP\n",
+        "\n",
+        "Le calcul de l'erreur réelle avec la fonction `true_error_func` nous retourne une erreure réelle de 8% et accuracy 92%, ce qui est un meilleur score que le modèle CNN. Toutefois, la loss au cours de l'entraînement ne descends pas en dessous de 1, ce qui remet en jeu la qualité de la classification. L'erreur réellé indique que notre modèle est capable de se généraliser a des données inconnues. Mais nous ne pouvons pas assurer sa fiabilité avec la loss de son entraînement. De manière générale, le modèle Encodeur-MLP est meilleur que le modèle CNN."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "--- \n",
+        "--- \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Gridsearch modèle Encodeur-MLP\n",
+        "\n",
         "\n",
         "Voici la gridsearch utilisée pour optimiser les paramètres du modèle Encoder_MLP_classifier."
       ]
@@ -3056,20 +3113,17 @@
         "\n",
         "```\n",
         " ____________________________________________________________________________________________\n",
-        "|                   Classification Encoder-CNN model (simplified version)                    |\n",
-        "|____________________________________________________________________________________________|\n",
+        "|                   Classification CNN model (simplified version)                            |\n",
+        "|____________________________________________________________________________________________|                 \n",
         "|                                                                                            |\n",
-        "|                   Encoder (Input: img_size)                                                |\n",
-        "|   Input --> Hidden Layers (ReLU) ... --> Output (latent zone)                              |\n",
-        "|                                                                                            |\n",
-        "|                   CNN (Input: latent_size)                                                 |\n",
+        "|                   CNN (Input: image_noisy)                                                 |\n",
         "|   Input (latent zone) --> Conv2D Hidden Layers (MaxPooling2D) ... --> Output (Softmax)     |\n",
         "|                                                                                            |\n",
         "|____________________________________________________________________________________________|\n",
         "```\n",
         "\n",
-        "Le but est que le decodeur CNN puisse utiliser la zone latente pour extraire des informations de cette dernière et effectuer une classification.\n",
-        "Les résultats montrent que cette architecture ne permet pas de bien classifier les chiffres dans leur représentation de zone latente. Nous pouvons penser que c'est à cause du manque d'information contextuelle de l'image qui ne permet pas au CNN d'extraire des informations nécessaire à la reconnaissance du chiffre. En observant l'image de la zone latente on voit bien que l'image manque de patterns et d'informations. En effet, les CNN sont conçus pour apprendre des représentations hiérarchiques des caractéristiques spatiales, en commençant par des bords et des textures simples jusqu'à des formes complexes et des parties d'objets. Si les données ne présentent pas cette structure hiérarchique, les couches supplémentaires dans les CNN pourraient ne pas apporter d'avantages significatifs. Une architecture trop complexe comme les CNN serait alors inutile pour ce genre de classification.\n",
+        "Le but est que le CNN puisse établir une baseline en terme de classification multiclasse. De même que pour l'autoencoder, le CNN utilise des informations très basse dimensions similaires à la zone latente. Il représente alors un bon concurrent pour le modèle Encodeur-MLP.\n",
+        "Les résultats montrent que cette architecture atteint 87% d'accuracy avec 12% d'erreur. Ces performances différents des standards de la littérature sur les données MNIST, mais il faut prendre en compte que les données sont bruitées, avec 3 variation de bruit différentes. Ceci enlève les informations contextuelle de l'image qui ne permet pas au CNN d'extraire des informations nécessaire à la reconnaissance du chiffre. En observant des images issues du jeu d'entraînement, on voit bien que l'image manque de patterns et d'informations. En effet, les CNN sont conçus pour apprendre des représentations hiérarchiques des caractéristiques spatiales, en commençant par des bords et des textures simples jusqu'à des formes complexes et des parties d'objets. Si les données ne présentent pas cette structure hiérarchique, les couches supplémentaires dans les CNN pourraient ne pas apporter d'avantages significatifs. Une architecture trop complexe comme les CNN serait alors inneficace pour ce genre de classification sur des images dont les informations contextuelles sont bruitées.\n",
         "\n",
         "\n",
         "La seconde architecture que nous avons considéré est la suivante :\n",
@@ -3088,7 +3142,10 @@
         "|____________________________________________________________________________________________|\n",
         "```\n",
         "\n",
-        "De même que pour l'architecture précédente le but est que le decodeur MLP puisse utiliser la zone latente pour extraire des informations de cette dernière et effectuer une classification. Contrairement à l'étude précédente, les résultats sont très bons. Les MLP sont des réseaux entièrement connectés et peuvent apprendre des relations non linéaires complexes entre les caractéristiques d'entrée. Ils ne sont pas contraints par les relations spatiales dans les données, contrairement aux CNN qui supposent des corrélations spatiales locales dans l'entrée. Dans un espace de petite dimension comme la zone latente, les caractéristiques pertinentes pour la classification ne sont pas facilement discernables au niveau des pixels mais émergent plutôt d'une combinaison de valeurs de pixels, les MLP, grace à leur couches cachées peuvent avoir une meilleure compréhension de l'information, sans avoir a chercher des informations contextuelles. Dans ce cas, l'architecture simpliste des MLP correspond à la nature très simple des données de la zone latente.\n",
+        "Le but est que le MLP puisse utiliser la zone latente pour extraire des informations de cette dernière et effectuer une classification. Contrairement à l'étude précédente, les résultats sont très bons (8% d'erreur, 92% d'accuracy). Les MLP sont des réseaux entièrement connectés et peuvent apprendre des relations non linéaires complexes entre les caractéristiques d'entrée. Ils ne sont pas contraints par les relations spatiales dans les données, contrairement aux CNN qui supposent des corrélations spatiales locales dans l'entrée. Dans un espace de petite dimension comme la zone latente, les caractéristiques pertinentes pour la classification ne sont pas facilement discernables au niveau des pixels mais émergent plutôt d'une combinaison de valeurs de pixels, les MLP, grace à leur couches cachées peuvent avoir une meilleure compréhension de l'information, sans avoir a chercher des informations contextuelles. Dans ce cas, l'architecture simpliste des MLP correspond à la nature très simple des données de la zone latente.\n",
+        "\n",
+        "\n",
+        "**Nous pouvons conclure l'étude en affirmant que le modèle Encodeur-MLP est plus performant que le modèle standard CNN pour classifier des données bruitées.**\n",
         "\n",
         "\n"
       ]
@@ -3102,13 +3159,6 @@
         "torch.save(classifier_encoder_mlp.state_dict(), \"classifieur\")  # We save the model state dict at PATH\n",
         "torch.save(cnn_benchmark.state_dict(), \"benchmark\")   "
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
