--- a/DenoisingAutoencoder.ipynb
+++ b/DenoisingAutoencoder.ipynb
@@ -31,7 +31,7 @@
         "            * [Création du trainset avec les zones latentes](#création-du-jeu-dentraînement-avec-les-zones-latentes)\n",
         "            * [Résultats du classifieur Encoder-MLP](#résultats-du-classifieur-encoder-mlp)\n",
         "            * [GridSearch modèle Encodeur-MLP](#gridsearch-modèle-encodeur-mlp)\n",
-        "    * [Discussion sur les réssultats obtenus](#discussion-sur-les-performances-de-modèles-encodeur-cnn-et-encodeur-mlp)\n",
+        "    * [Discussion sur les résultats obtenus](#discussion-sur-les-performances-de-modèles-encodeur-cnn-et-encodeur-mlp)\n",
         "\n",
         "\n",
         "\n"
@@ -111,7 +111,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Exploration et création des bruits"
+        "### Exploration et création des bruits"
       ]
     },
     {
