--- a/DenoisingAutoencoder.ipynb
+++ b/DenoisingAutoencoder.ipynb
@@ -41,7 +41,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Etude Autoencodeur <a class=\"anchor\" id=\"etude-ae\"></a>\n",
+        "# Etude Autoencodeur <a id=\"etude-ae\"></a>\n",
         "\n",
         "Un autoencodeur est un réseau de neurones utilisé pour la réduction de dimension ; c'est-à-dire pour la sélection et l'extraction des caractéristiques. Les autoencodeurs avec plus de couches cachées que d'entrées courent le risque d'apprendre la fonction identité - où la sortie est simplement égale à l'entrée - devenant ainsi inutiles.\n",
         "Les autoencodeurs de débruitage sont une extension de l'autoencodeur de base, et représentent une version stochastique de celui-ci. Les autoencodeurs de débruitage tentent de résoudre le risque de la fonction identité en corrompant aléatoirement l'entrée (c'est-à-dire en introduisant du bruit) que l'autoencodeur doit ensuite reconstruire, ou débruiter.\n",
@@ -111,7 +111,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Exploration et création des bruits"
+        "### Exploration et création des bruits <a id=\"exploration-et-création-des-bruits\"></a>"
       ]
     },
     {
@@ -431,7 +431,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Création d'un dataset bruité\n",
+        "### Création d'un dataset bruité <a class=\"anchor\" id=\"création-dun-dataset-bruité\"></a>\n",
         "\n",
         "La classe NoisedDataset, comme son nom l'indique est un dataset composé d'images bruitées. Le dataset est composé de tuples ayant la structure suivante :\n",
         "\n",
@@ -500,7 +500,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Création des dataloaders à partir des datasets"
+        "#### Création des dataloaders à partir des datasets <a class=\"anchor\" id=\"création-des-dataloaders-à-partir-des-datasets\"></a>"
       ]
     },
     {
@@ -526,7 +526,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Definition de l'Autoencodeur de débruitage\n",
+        "### Definition de l'Autoencodeur de débruitage <a class=\"anchor\" id=\"definition-de-lautoencodeur-de-débruitage\"></a>\n",
         "\n",
         "Cet autoencodeur de débruitage est capable de prendre en entrée des images (ou des vecteurs) et de les encoder dans un espace de dimension réduite appelé \"zone latente\". Il les décode ensuite à partir de cet espace latent pour reconstruire l'entrée initiale sans le bruit.\n",
         "\n",
@@ -621,7 +621,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Definition de l'optimisateur, de la loss et du modèle\n",
+        "#### Definition de l'optimisateur, de la loss et du modèle <a class=\"anchor\" id=\"definition-de-loptimisateur-de-la-loss-et-du-modèle\"></a>\n",
         "\n",
         "Le choix d'une loss adaptées est très importante dans le process d'entraînement d'un modèle. La perte de Mean Squared Error (MSE) est appropriée pour les autoencodeurs en raison de sa compatibilité avec les espaces de sortie continus, de sa sensibilité aux erreurs importantes et de sa facilité de normalisation avec le calcul de la moyenne. Elle pénalise plus lourdement les erreurs importantes."
       ]
@@ -679,7 +679,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Definition de la methode d'entraînement du modèle\n",
+        "### Definition de la methode d'entraînement du modèle <a class=\"anchor\" id=\"definition-de-la-methode-dentraînement-du-modèle\"></a>\n",
         "\n",
         "La méthode train_test permet de réaliser l'entraînement et l'évaluation d'un modèle (`model`) passé en paramètre.\n",
         "\n",
@@ -932,7 +932,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Résultats de l'entraînement du modèle\n",
+        "#### Résultats de l'entraînement du modèle <a class=\"anchor\" id=\"résultats-de-lentraînement-du-modèle\"></a>\n",
         "\n",
         "Au terme de l'entraînement qui à duré 16 minutes environ, on observe une loss qui décroit de 2% à 1%, ce qui montre une performance relativement bonne du modèle pendant son entraînement. Ce score est en accord avec son erreur de generalisation d'environ 1% montrant sa capacité à débruiter des données non présentes lors de l'entraînement. A présent, tentons d'optimiser le modèle afin de gagner en performance."
       ]
@@ -941,7 +941,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Optimisation de l'architecture du modèle\n"
+        "### Optimisation de l'architecture du modèle <a class=\"anchor\" id=\"optimisation-de-larchitecture-du-modèle\"></a>\n"
       ]
     },
     {
@@ -1580,7 +1580,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Visualisation des prédictions du modèle sur des images bruitées"
+        "### Visualisation des prédictions du modèle sur des images bruitées  <a class=\"anchor\" id=\"visualisation-des-prédictions-du-modèle-sur-des-images-bruitées\"></a>"
       ]
     },
     {
@@ -1726,7 +1726,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Modèle sur l'ensemble des données MNIST\n",
+        "### Modèle sur l'ensemble des données MNIST <a class=\"anchor\" id=\"modèle-sur-lensemble-des-données-mnist\"></a>\n",
         "\n",
         "A présent, nous allons déployer un modèle sur l'ensemble des données MNIST afin de tester la capacité qu'à notre modèle à classifier plusieurs classes."
       ]
@@ -2154,7 +2154,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Implémentation de nouvelles architectures dérivées"
+        "# Implémentation de nouvelles architectures dérivées <a class=\"anchor\" id=\"implémentation-de-nouvelles-architectures-dérivées\"></a>"
       ]
     },
     {
@@ -2264,7 +2264,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Définition du classifier Benchmark CNN\n",
+        "### Définition du classifier Benchmark CNN <a class=\"anchor\" id=\"définition-du-classifier-benchmark-cnn\"></a>\n",
         "\n",
         "**L'objectif est de comparer ce classifier benchmark a une architecture Encoder-MLP**.\n",
         "\n",
@@ -2451,7 +2451,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Résultat Benchmark CNN\n",
+        "#### Résultat Benchmark CNN <a class=\"anchor\" id=\"résultat-benchmark-cnn\"></a>\n",
         "\n",
         "Les résultats précédents nous montrent que notre modèle CNN n'est pas de très grande qualité. Pendant son entraînement, la loss n'atteint pas de valeur en dessous de 1, ce qui laisse à désirer la qualité de la classification. Puis, en calculant sont accuracy sur le jeu de test, on trouve 87% et 12% d'erreur. Ce modèle créé une bonne baseline sur laquelle comparer le modèle suivant."
       ]
@@ -2460,7 +2460,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Definition du classifier (Encoder-MLP)\n",
+        "### Definition du classifier (Encoder-MLP) <a class=\"anchor\" id=\"definition-du-classifier-encoder-mlp\"></a>\n",
         "\n",
         "**Ce modèle entre en compétition avec notre claassifier CNN**\n",
         "\n",
@@ -2514,7 +2514,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Création du jeu d'entraînement avec les zones latentes\n",
+        "### Création du jeu d'entraînement avec les zones latentes <a class=\"anchor\" id=\"création-du-jeu-dentraînement-avec-les-zones-latentes\"></a>\n",
         "\n",
         "La case suivante initialise le jeu `training_data` constitué de toutes les zones latentes après le passage des images du jeu `traindata_all` dans l'encodeur que nous avons implémenté plus haut. Cette manière d'initialiser le jeu de données nous évite beaucoup de difficultés sur la résolution des dimensions si cette opération était faite dans la boucle d'entraînement. De cette manière, nous avons un dataloader qui peut être parcouru par notre modèle `small_classifier`de type MLP."
       ]
@@ -2684,7 +2684,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Résultats du classifieur Encoder-MLP\n",
+        "### Résultats du classifieur Encoder-MLP <a class=\"anchor\" id=\"résultats-du-classifieur-encoder-mlp\"></a>\n",
         "\n",
         "Le calcul de l'erreur réelle avec la fonction `true_error_func` nous retourne une erreure réelle de 8% et accuracy 92%, ce qui est un meilleur score que le modèle CNN. Toutefois, la loss au cours de l'entraînement ne descends pas en dessous de 1, ce qui remet en jeu la qualité de la classification. L'erreur réellé indique que notre modèle est capable de se généraliser a des données inconnues. Mais nous ne pouvons pas assurer sa fiabilité avec la loss de son entraînement. De manière générale, le modèle Encodeur-MLP est meilleur que le modèle CNN."
       ]
@@ -2700,7 +2700,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Gridsearch modèle Encodeur-MLP\n",
+        "### Gridsearch modèle Encodeur-MLP <a class=\"anchor\" id=\"gridsearch-modèle-encodeur-mlp\"></a>\n",
         "\n",
         "\n",
         "Voici la gridsearch utilisée pour optimiser les paramètres du modèle Encoder_MLP_classifier."
@@ -3105,7 +3105,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Discussion sur les performances de modèles Encodeur-CNN et Encodeur-MLP\n",
+        "## Discussion sur les performances de modèles Encodeur-CNN et Encodeur-MLP <a class=\"anchor\" id=\"discussion-sur-les-performances-de-modèles-encodeur-cnn-et-encodeur-mlp\"></a>\n",
         "\n",
         "Après avoir testé notre Autoencodeur de débruitage, nous avons développé des architectures dérivées qui utilisent l'apprentissage de représentation de notre encodeur (nottament la zone latente) afin d'évaluer comment cette zone latente pouvait être utilisée à des fins de classification multiclasse.\n",
         "\n",
